chore: parameterize new test